--- a/.gitignore
+++ b/.gitignore
@@ -254,4 +254,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
-# End of https://www.toptal.com/developers/gitignore/api/django,python
+# End of https://www.toptal.com/developers/gitignore/api/django,python\
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.pyw
+db.sqlite3
+media
